
v0.8.0:

  THIS RELEASE BREAKS BACKWARD-COMPATABILITY IN THE ON-DISK FILE LAYOUT.

    * move all esky control files into an "esky-files" subdir, to avoid clutter
      in the top-level version dir if/when additional files are added.
    * bootstrap-manifest.txt:  always use forward-slashes in paths, even
      when building for Windows.

v0.7.4:

    * py2app:  ensure apps are always inside an "<appname>.app" directory,
      so they will appear correctly in finder etc.
    * esky.util:  added deep_extract_zipfile() function to extract a zipfile
      while ignoring any common directory prefix.
    * esky.finder:  allow downloaded zipfiles to have a containing folder
      around the appdir content, to allow friendlier zipfile behaviour.

v0.7.3:

    * Esky.cleanup_at_exit:  don't fail if there are no installed versions,
      just use the currently-executing script.
    * be more careful about missing files when manipulating eskys that target
      other platforms (e.g. upgrading a win32 esky on a linux box).
    * ensure that fcntl is always available in the bootstrap env.
    * updated tutorial to talk about generating patches.
    * have all executables lock the version dir at startup, even if they're
      not launched through the bootstrap env.

v0.7.2:

    * added methods Esky.needs_cleanup() and VersionFinder.needs_cleanup();
      these can be used to test whether a call to cleanup() is necessary and,
      if not, to avoid locking the appdir or escalating to root.
    * added native sudo implementation for OSX.
    * allow Esky.lock() and Esky.unlock() to be called via sudo proxy.
    * support for Python 3 on win32 (cx-freeze only).
    * fixed compatability with Python 2.5 (via __future__ imports).
    * Esky.cleanup_at_exit:  try to launch the latest version rather than
      the current version, so current version can be cleaned up.
    * DefaultVersionFinder:  when a downloaded file fails because it is